Prevent calendar event wrapping temporarily.

--- a/src/app/dashboard/agenda/agenda.component.less
+++ b/src/app/dashboard/agenda/agenda.component.less
@@ -14,7 +14,7 @@ p {
 .events-container {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 8px;
 }
 
@@ -23,7 +23,7 @@ p {
   border-radius: 4px;
   overflow: hidden;
   padding: 4px 8px;
-  width: 184px;
+  min-width: 184px;
 }
 
 .green {
